--- a/senguo.cc/admin/static/css/official_shop.css
+++ b/senguo.cc/admin/static/css/official_shop.css
@@ -1,25 +1,27 @@
 body{background-color:#f5f5f7;}
+.hide{display: none;}
 .map_box{position:relative;height:882px;background:#304864;padding-top:60px;overflow: hidden;}
 .shop_listbg{position: absolute;z-index:0;top: 0;left: 0;width: 100%;}
 .map_box .box{width:800px;margin:0 auto;}
+.map_box>a {position: absolute;top: 200px;width: 180px;height: 50px;line-height: 50px;font-size: 18px;border:1px solid #58d0a6;color: #58d0a6;}
 .map{width:100%;height:700px;}
-.list_box{width:100%;}
-.list_box ul{width:120%;}
+.list_box{width:100%;margin-top: 70px;}
+.list_box ul{width:100%;}
 .list_box ul .item{width:240px;height:300px;float:left;margin-left:8px;position:relative;margin-bottom:8px;overflow: hidden;}
 .list_box ul .item .img{width:100%;height:235px;overflow:hidden;padding:10px;}
 .list_box ul .item .img img{width:100%;}
 .list_box ul .item>a{text-decoration:none;}
-.picture-bg{width: 240px;height: 300px;position: absolute;top: 240px;background-color: #32cd32;transition: all 0.35s;-moz-transition: all 0.35s;-webkit-transition: all 0.35s;-o-transition: all 0.35s;}
+.picture-bg{width: 240px;height: 300px;position: absolute;top: 240px;background-color: #58d0a6;transition: all 0.35s;-moz-transition: all 0.35s;-webkit-transition: all 0.35s;-o-transition: all 0.35s;}
 .list_box ul .item .con{width: 100%;height: 60px;position: absolute;top:240px;opacity: 1;transition: all 0.35s;-moz-transition: top 0.35s;-webkit-transition: top 0.35s;-o-transition: top 0.35s;}
 .list_box ul .item:hover .picture-bg{top:0;width: 100%;height: 300px;opacity: 0.95;}
 .list_box ul .item:hover .con{top: 0;}
 .list_box ul .item .shop_name{width:100%;height:60px;line-height: 60px;text-align: center;font-size: 20px;;}
 .list_box ul .item .intro{width: 200px;font-size: 16px;line-height: 20px;margin-left: 25px;opacity: 1}
-.number_box{width:620px;height:108px;line-height:108px;margin:0 auto;}
-.number_box .num{width:61px;height:108px;margin-left:10px;margin-right:10px;background:url('/static/official_img/n_bg.png');font-size:80px;position:relative;}
-.number_box .n{position:absolute;z-index:5;left:7px;display:inline-block;width:30px;height:108px;line-height:108px;}
-.number_box .line{position:absolute;z-index:10;background:url('/static/official_img/n_line.png');display:inline-block;width:61px;height:4px;top:52px;left:0;}
-.province_name{height:30px;line-height:40px;}
+.number_box{width:730px;height:70px;line-height:70px;margin:0 auto;position: relative;z-index: 5;}
+.number_box .num{width:61px;height:70px;margin-left:10px;margin-right:10px;background:url('/static/official_img/num.png') no-repeat;font-size:70px;position:relative;}
+.number_box .n{position:absolute;z-index:5;left:10px;display:inline-block;width:30px;height:70px;line-height:70px;}
+.shop_list{position: relative;}
+.province_name{z-index: 3;text-align: center;width: 140px;color: #fff;height:40px;line-height:40px;position: absolute;top: 0;left: 50%;margin-left: -70px;background-color: #58d0a6;}
 .page_box a:hover{text-decoration:none;}
 .page_box .item{float:left;display:inline-block;border:1px solid #e7e7eb;margin-right:10px;width:36px;height:36px;text-align:center;line-height:36px;}
 .page_box .next_pre{width:80px;display:inline-block;border:1px solid #e7e7eb;color:#666;margin-right:10px;height:36px;text-align:center;line-height:36px;}
@@ -28,5 +30,7 @@ body{background-color:#f5f5f7;}
 .page_box a:hover{background:#ddd;}
 .page_box a:focus{background:#ddd;}
 .page_box a:acitve{background:#ddd;}
+.no-more{position: absolute;bottom: 0;left: 50%;margin-left: -20px;height: 20px;margin-bottom: 20px;}
+.add-more-bg{height: 30px;margin: 30px auto;}
 .loading{margin-top:40%;}
 .loading2{width:1000px;margin:0 auto;margin-left:-20px;}
