--- a/senguo.cc/admin/static/css/official_shop.css
+++ b/senguo.cc/admin/static/css/official_shop.css
@@ -3,7 +3,8 @@ body{background-color:#f5f5f7;}
 .map_box{position:relative;height:882px;background:#304864;padding-top:60px;overflow: hidden;}
 .shop_listbg{position: absolute;z-index:0;top: 0;left: 0;width: 100%;}
 .map_box .box{width:800px;margin:0 auto;}
-.map_box>a {position: absolute;top: 200px;width: 180px;height: 50px;line-height: 50px;font-size: 18px;border:1px solid #58d0a6;color: #58d0a6;}
+.look_all {position: absolute;left: 50%;margin-left: -500px;height: 50px;width: 1000px;text-align: center;}
+.map_box .look_all>a {z-index: 99;position: relative;top:100px;display: inline-block;width: 180px;height: 50px;line-height: 50px;font-size: 18px;border:1px solid #58d0a6;color: #58d0a6;}
 .map{width:100%;height:700px;}
 .list_box{width:100%;margin-top: 70px;}
 .list_box ul{width:100%;}
