--- a/senguo.cc/admin/templates/mbbs/artical-detail.html
+++ b/senguo.cc/admin/templates/mbbs/artical-detail.html
@@ -47,7 +47,7 @@
     <a href="javascript:;" class="p-article add-store {% if article['collect_if'] == True %}add-store-active{% end %} if-login" id="store-atical" data-id="{{article['id']}}"></a>
     <div contentEditable="true" class="reply-ipt-temp"></div>
     <textarea class="reply-ipt" placeholder="请输入评论"></textarea>
-    <a href="javascript:;" class="reply-btn if-login" id="reply" data-id="{{article['id']}}">发表</a>
+    <a href="javascript:;" class="reply-btn if-login" id="comment" data-id="{{article['id']}}">发表</a>
 </div>
 <div class="pop-win pop-login hide" data-id="{{if_login}}">
     <div class="pop-content">
