--- a/senguo.cc/admin/static/css/official_base.css
+++ b/senguo.cc/admin/static/css/official_base.css
@@ -1,5 +1,5 @@
 html{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;text-size-adjust:100%}
-body{margin:0;font-size:12px;line-height:14px;font-family:"Helvetica Neue","Hiragino Sans GB","Microsoft YaHei","\9ED1\4F53",Arial,sans-serif;color:#333;background:#fff;-webkit-font-smoothing:antialiased;}
+body{padding-top: 76px;margin:0;font-size:12px;line-height:14px;font-family:"Helvetica Neue","Hiragino Sans GB","Microsoft YaHei","\9ED1\4F53",Arial,sans-serif;color:#333;background:#fff;-webkit-font-smoothing:antialiased;}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}a{background:0 0}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}h1{margin:.67em 0;font-size:2em}mark{color:#000;background:#ff0}small{font-size:80%}sub,sup{position:relative;font-size:75%;line-height:0;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{height:0;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{margin:0;font:inherit;color:inherit}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{padding:0;border:0}input{line-height:normal}input[type=checkbox],input[type=radio]{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box;-webkit-appearance:textfield}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{padding:.35em .625em .75em;margin:0 2px;border:1px solid silver}legend{padding:0;border:0}textarea{overflow:auto}optgroup{font-weight:700}table{border-spacing:0;border-collapse:collapse}td,th{padding:0}a,a:visited{text-decoration:underline}tr,img{page-break-inside:avoid}img{max-width:100%!important;border:0}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}select{background:#fff!important}.table td,.table th{background-color:#fff!important}.btn>.caret,
 p{margin:0;word-break:break-all;text-align:left;line-height: 21px;}
 ol,ul,li{list-style:none;}
@@ -133,6 +133,7 @@ a,input,button{ outline:none; }
 .login-box li{width:80px;text-align:center;border:1px solid #58d0a6;border-radius: 3px;}
 
 .logo_box p{margin-bottom:0;}
+.logo_box>a{display: inline-block;height: 76px;width: 151px;}
 .logo_box .logo{width:151px;margin-top: 9px;position: relative;z-index: 99;}
 .box_sty{width:100%;float:left;}
 
@@ -248,16 +249,19 @@ a,input,button{ outline:none; }
 .online-bg .online-business .online-experience,
 .online-bg .online-business .online-peer,
 .online-bg .online-business .online-chains{position: absolute;display: inline-block;font-size: 30px;line-height: 235px;text-align: center;font-weight: bold;color: #58d0a6;transition: all .5s;-moz-transition: all .5s; -webkit-transition: all .5s;-o-transition: all .5s; }
+
 .online-bg .online-business .trend:hover .online-trend,
 .online-bg .online-business .professional:hover .online-professional,
 .online-bg .online-business .experience:hover .online-experience,
 .online-bg .online-business .peer:hover .online-peer,
 .online-bg .online-business .chains:hover .online-chains{opacity: .6;}
+
 .online-bg .online-business .trend:hover .online-trend-content,
 .online-bg .online-business .professional:hover .online-professional-content,
 .online-bg .online-business .experience:hover .online-experience-content,
 .online-bg .online-business .peer:hover .online-peer-content,
 .online-bg .online-business .chains:hover .online-chains-content{opacity: 1;}
+
 .online-bg .online-business .online-trend-content,
 .online-bg .online-business .online-professional-content,
 .online-bg .online-business .online-experience-content,
@@ -290,9 +294,8 @@ a,input,button{ outline:none; }
 .online-bg .online-business .online-chains-content{background:url("../official_img/chains-content.png");}
 /*底部背景图片*/
 .footer-bg-img {position: relative;width: 100%;text-align: center;background-color: #f0f4f0;}
-.footer-bg-img  img {width: 100%;margin-top: 70px;}
-.apply-bottom {position: absolute;top: 45%;left: 50%;width: 1000px;height: 200px;margin-left: -500px;text-align: center;}
+.footer-bg-img>img {width: 100%;margin-top: 70px;min-width: 1670px;min-height: 288px;}
+.apply-bottom {position: absolute;top: 200px;left: 50%;width: 1000px;height: 150px;margin-left: -500px;text-align: center;}
 .apply-bottom a {position: absolute;left: 50%;margin-left: -70px;margin-top: 40px;display: block;width: 140px;height: 40px;line-height: 40px;border-radius: 3px;font-size: 18px;font-weight: bold;text-align: center;background-color: #58d0a6;color: #fff;-webkit-transition: all .2s ease-in-out;transition: all .2s ease-in-out;}
 .apply-bottom a:hover {background-color: rgba(255,255,255,0);color: #58d0a6;border: 2px solid #58d0a6;border-radius: 3px;text-decoration: none;}
 .apply-bottom>span {display: inline-block;height: 40px;font-weight: bold;font-size: 36px;color: #fff;}
-body{padding-top: 76px;}
