官网服务号微信二维码

--- a/senguo.cc/admin/static/css/official_base.css
+++ b/senguo.cc/admin/static/css/official_base.css
@@ -211,7 +211,8 @@ a,input,button{ outline:none; }
 .fi-kf-show{border:2px solid #33CC66; background:#fff; position:absolute;bottom: 0;left: -194px;padding: 6px;display: none;}
 .r-kf:hover .fi-kf-show{display: block;}
 .fi-kf-show p{font-size: 14px;line-height: 20px;color: #666;}
-.wx-show-txt{width:200px; height:200px; padding:20px; font-size:18px; line-height:33px;background:url("../official_img/server.jpg") no-repeat;background-size: 200px;}
+.wx-show-txt{width:200px; height:200px; font-size:18px; line-height:33px;background-size: 200px;}
+.wx-show-txt>img {width: 200px;height: 200px;}
 .wx-threeRs{width:0;height:0;right:-26px; bottom:20px;z-index:200;border-width:13px; border-style:solid; border-color:transparent transparent transparent #fff; display:block; position:absolute;}
 .wx-threeR{width: 0;height: 0;right: -32px;bottom: 17px;z-index:100;border-width: 16px;border-style: solid;border-color: transparent transparent transparent #33CC66;display: block;position: absolute;}
 .fi-kf-show .wx-threeR{bottom:5px;}
