--- a/senguo.cc/admin/templates/official/base.html
+++ b/senguo.cc/admin/templates/official/base.html
@@ -72,7 +72,9 @@
         <a href="javascript:;" title="返回顶部" id="scrollUp" class="scrollUp"></a>
         <a title="森果服务号" href="javascript:;" id="r-wx" class="r-wx">
             <div id="fi-wx-show" class="fi-wx-show">
-                <div class="wx-show-txt"></div>
+                <div class="wx-show-txt">
+                    <img src="{{static_url('official_img/server.jpg')}}" class="logo"/>
+                </div>
                 <div class="wx-threeRs"></div>
                 <div class="wx-threeR"></div>
             </div>
