--- a/senguo.cc/admin/templates/admin/comment.html
+++ b/senguo.cc/admin/templates/admin/comment.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="col-md-4">
                             <p class="shop-point">
-                                质量：<span class="zl">{{comment[11]}}</span> 速度：<span class="sd">{{comment[12]}}</span> 服务：<span class="fw">{{comment[13]}}</span>
+                                质量：<span class="zl">{{comment[11]}}</span>&nbsp;&nbsp;&nbsp;速度：<span class="sd">{{comment[12]}}</span>&nbsp;&nbsp;&nbsp;服务：<span class="fw">{{comment[13]}}</span>
                             </p>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                             <p class="text-grey9">{{comment[0]}}</p>
                             <p class="saler_reply {{hidden}}">商家回复：<span class="reply_word">{{comment[3]}}</span></p>
                             <p class="del-box text-pink {{hidden1}}">申请删除理由：<span class="del-reason">{{comment[8]}}</span></p>
-                            <p class="reject-box text-pink  {{hidden2}}">被拒理由:<span class="reject-reason">{{comment[9]}}</span></p>
+                            <p class="reject-box text-pink  {{hidden2}}">被拒理由：<span class="reject-reason">{{comment[9]}}</span></p>
                         </div>
                         <div class="wrap-imgs col-md-5">
                             <div class="row">
