--- a/senguo.cc/admin/templates/admin/orders.html
+++ b/senguo.cc/admin/templates/admin/orders.html
@@ -244,14 +244,14 @@
             <div class="modal-body set-width-float bg-white">
                 <ul class="order-export-con">
                     <li><span class="tit">当前店铺:</span>{{current_shop.shop_name}}</li>
-                    <li><span class="tit">下单时间:</span><input type="text" class="export-date1"/> 到 <input type="text" class="export-date2"/></li>
-                    <li><span class="tit">订单类型:</span>
+                    <li><span class="tit">下单时间:</span><input type="text" class="Wdate export-date1" onFocus="WdatePicker({isShowWeek:true,dateFmt:'yyyy-MM-dd',maxDate:'#F{$dp.$D(\'date2\')}'})"/ id= "date1"> 到 <input type="text" class="Wdate export-date2" onFocus="WdatePicker({isShowWeek:true,dateFmt:'yyyy-MM-dd',minDate:'#F{$dp.$D(\'date1\')}'})" id="date2"/></li>
+                    <li class="export-box hide"><span class="tit">订单类型:</span>
                         <div class="dropdown slide-down-select w130">
                             <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" id="dropdownMenu6" data-toggle="dropdown">
                                 <em class="pull-left export-type" data-id="9">所有</em>
                                 <span class="caret pull-right no-margin-left rotate0"></span>
                             </button>
-                            <ul class="dropdown-menu dropdown-menu-right w130 condition-list" role="menu" aria-labelledby="dropdownMenu6" id="currentShopChange4">
+                            <ul class="dropdown-menu dropdown-menu-right w130 condition-list2" role="menu" aria-labelledby="dropdownMenu6" id="currentShopChange4">
                                 <li role="presentation">
                                     <a class="item" href="javascript:;" data-id="9">所有</a>
                                 </li>
@@ -267,14 +267,14 @@
                             </ul>
                         </div>
                     </li>
-                    <li>
+                    <li class="export-box hide">
                         <span class="tit">订单状态:</span>
                         <div class="dropdown slide-down-select w130">
                             <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" id="dropdownMenu7" data-toggle="dropdown">
                                 <em class="pull-left export-status" data-id="5">所有</em>
                                 <span class="caret pull-right no-margin-left rotate0"></span>
                             </button>
-                            <ul class="dropdown-menu dropdown-menu-right w130 export-status" role="menu" aria-labelledby="dropdownMenu7" id="currentShopChange4">
+                            <ul class="dropdown-menu dropdown-menu-right w130 export-status condition-list2" role="menu" aria-labelledby="dropdownMenu7" id="currentShopChange4">
                                  <li role="presentation">
                                     <a class="item" href="javascript:;" data-id="5">所有</a>
                                 </li>
@@ -293,14 +293,14 @@
                             </ul>
                         </div>
                     </li>
-                    <li>
+                    <li class="export-box hide">
                          <span class="tit">支付方式:</span>
                          <div class="dropdown slide-down-select w130">
                             <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" id="dropdownMenu4" data-toggle="dropdown">
                                 <em class="pull-left export-pay" data-id="9">所有</em>
                                 <span class="caret pull-right no-margin-left rotate0"></span>
                             </button>
-                            <ul class="dropdown-menu dropdown-menu-right w130 condition-list" role="menu" aria-labelledby="dropdownMenu4" id="currentShopChange4">
+                            <ul class="dropdown-menu dropdown-menu-right w130 condition-list2" role="menu" aria-labelledby="dropdownMenu4" id="currentShopChange4">
                                 <li role="presentation">
                                     <a class="item" href="javascript:;" data-id="9">所有</a>
                                 </li>
@@ -316,14 +316,14 @@
                             </ul>
                         </div>
                     </li>
-                    <li>
+                    <li class="export-box hide">
                         <span class="tit">订单金额:</span>
                         <input type="text" class="export-money1"/> 到 <input type="text" class="export-money2"/>
                     </li>
                     <li>
                         <span class="tit">&nbsp;</span>
                         <button class="order-export-sure modal-sure-btn">导出</button>
-                        <a href="javascript:;" class="ml10">展开高级选项</a>
+                        <a href="javascript:;" class="ml10 export-notice">展开高级选项</a>
                     </li>
                 </ul>
             </div>
@@ -715,6 +715,7 @@
 {% end %}
 {% block bottom %}
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=2595684c343d6499bf469da8a9c18231"></script>
+<script src="{{static_url('js/third/datepicker/WdatePicker.js')}}"></script>
 <script src="{{static_url('js/area.js')}}"></script>
 <script src="{{static_url('js/admin-order.js')}}"></script>
 <script src="{{static_url('js/admin-user-order.js')}}"></script>
