--- a/senguo.cc/admin/templates/admin/orders.html
+++ b/senguo.cc/admin/templates/admin/orders.html
@@ -271,24 +271,27 @@
                         <span class="tit">订单状态:</span>
                         <div class="dropdown slide-down-select w130">
                             <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" id="dropdownMenu7" data-toggle="dropdown">
-                                <em class="pull-left export-status" data-id="5">所有</em>
+                                <em class="pull-left export-status" data-id="9">所有</em>
                                 <span class="caret pull-right no-margin-left rotate0"></span>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-right w130 export-status condition-list2" role="menu" aria-labelledby="dropdownMenu7" id="currentShopChange4">
                                  <li role="presentation">
-                                    <a class="item" href="javascript:;" data-id="5">所有</a>
+                                    <a class="item" href="javascript:;" data-id="9">所有</a>
                                 </li>
                                 <li role="presentation">
                                     <a class="item" href="javascript:;" data-id="1">未处理 </a>
                                 </li>
                                 <li role="presentation">
-                                    <a class="item" href="javascript:;" data-id="2">配送中</a>
+                                    <a class="item" href="javascript:;" data-id="2">处理中</a>
                                 </li>
                                  <li role="presentation">
                                     <a class="item" href="javascript:;" data-id="3">已完成</a>
                                 </li>
-                                 <li role="presentation">
-                                    <a class="item" href="javascript:;" data-id="3">售后/退款</a>
+                                <li role="presentation">
+                                    <a class="item" href="javascript:;" data-id="4">已退款</a>
+                                </li>
+                                <li role="presentation">
+                                    <a class="item" href="javascript:;" data-id="5">已取消</a>
                                 </li>
                             </ul>
                         </div>
