--- a/senguo.cc/admin/templates/customer/base.html
+++ b/senguo.cc/admin/templates/customer/base.html
@@ -37,7 +37,8 @@
 {% set cart_active = ""%}
 {% set center_active = ""%}
 {% set dis_active ="" %}
-
+{% set shop_marketing="" %}
+{% set get_shop_auth ="" %}
 {% if subpage == "shop" %}
 {% set shop_active = "active"%}
 {% elif subpage == "home"%}
