--- a/senguo.cc/admin/templates/official/home.html
+++ b/senguo.cc/admin/templates/official/home.html
@@ -243,7 +243,11 @@
             <span>森果之旅从这里开始...</span>
             <a href="/apply">申请接入</a>
         </div>
+        <div class="record">
+            <p class="">鄂ICP备14012961号-1&nbsp;&nbsp;Copyright&copy;2014-2015 senguo.cc版权所有</p>
+        </div>
     </div>
+    
 
 	<!--<div class="announcement text-center">
 		<ul class="box font16">
@@ -252,6 +256,7 @@
 	</div>-->
     
 </div>
+
 {% end %}
 {% block bottom-js%}
 <script src="{{static_url('m-admin/js/idangerous.swiper.min.js')}}"></script>
