--- a/senguo.cc/admin/templates/official/shoplist.html
+++ b/senguo.cc/admin/templates/official/shoplist.html
@@ -40,7 +40,14 @@
 			<p class="text-center text-grey6">~努力加载中~</p>
 		</div>
 	</div>
+
 </div>
+<div class="record-bg">
+	<div class="record">
+	    <p class="">鄂ICP备14012961号-1&nbsp;&nbsp;Copyright&copy;2014-2015 senguo.cc版权所有</p>
+	</div>
+</div>
+
 {% end%}
 {% block bottom-js%}
 <script src="/static/js/echarts.js"></script>
