--- a/senguo.cc/admin/static/css/official_about.css
+++ b/senguo.cc/admin/static/css/official_about.css
@@ -30,7 +30,7 @@
 .new_list>p{text-align: center;font-size: 30px;font-weight: bold;height: 40px;margin-bottom: 30px;}
 .new_list .item{width: 220px;margin-left: 24px;}
 .new_list .item a{font-size: 16px;display: inline-block;padding: 15px 10px;line-height: 23px;width:220px;height: 96px;text-align: center;color: #fff;background-color: #58d0a6;}
-.more-news-bg{width: 100%;height: 200px;background-color: #f0f4f0;padding-top: 20px;}
+.more-news-bg{position: relative;width: 100%;height: 220px;background-color: #f0f4f0;padding-top: 20px;}
 .more-news-bg .pull-left,.more-news-bg .pull-right{width: 48%;background-color: #fff;padding: 10px;height: 140px;}
 .pull-left{float: left;}
 .pull-right{float:right;}
