--- a/senguo.cc/admin/static/css/official_product.css
+++ b/senguo.cc/admin/static/css/official_product.css
@@ -70,7 +70,7 @@
 .market-icons .market-four{top:155px;left:560px;background:url('/static/official_img/market_4.png') no-repeat;}
 .market-icons .market-five{top:250px;left:660px;background:url('/static/official_img/market_5.png') no-repeat;}
 .market-icons .market-six{top:180px;left:770px;background:url('/static/official_img/market_6.png') no-repeat;}
-.store-bg{position: relative;height: 500px;max-width: 1920px;margin: 0 auto;}
+.store-bg{position: relative;max-height: 692px;max-width: 1920px;margin: 0 auto;}
 .store-bg>img{min-height: 500px;min-width: 1024px;}
 .wrap-feature{position: absolute;top:120px;width: 1000px;height: 364px;}
 .feature-list>li{width: 50%;float: left;}
@@ -81,3 +81,4 @@
 .graph-line{display: inline-block;width: 600px;height: 290px;position: absolute;bottom: 0;left: -113px;background-color: #58d0a6;}
 .graph-up{display: inline-block;width: 5px;height: 0px;background-color: #fff;opacity: 0.6;position: absolute;bottom: 0;left: 181px;}
 .graph-circle{width: 26px;height: 25px;opacity: 0;position: absolute;bottom: 260px;left: 170px;background:url('/static/official_img/circle.png') no-repeat;}
+.record{position: relative !important;}
