--- a/senguo.cc/admin/static/css/official_shop.css
+++ b/senguo.cc/admin/static/css/official_shop.css
@@ -35,3 +35,4 @@ body{background-color:#f5f5f7;}
 .add-more-bg{height: 30px;margin: 30px auto;}
 .loading{margin-top:40%;}
 .loading2{width:1000px;margin:0 auto;margin-left:-20px;}
+.record-bg{width: 100%;height: 40px;position: relative;bottom: 0;}
