--- a/senguo.cc/admin/templates/official/about.html
+++ b/senguo.cc/admin/templates/official/about.html
@@ -101,6 +101,9 @@
 			<a href="http://www.51ecom.cn/news_show.php?md5id=41b7d25069" target="_blank">《创业项目PK创意与运营--大学生电商创业项目路演》<span>武汉科技报</span></a>
 		</div>
 	</div>
+	<div class="record">
+        <p class="">鄂ICP备14012961号-1&nbsp;&nbsp;Copyright&copy;2014-2015 senguo.cc版权所有</p>
+    </div>
 </div>
 {% end %}
 {% block bottom %}
