--- a/senguo.cc/admin/templates/official/appdownload.html
+++ b/senguo.cc/admin/templates/official/appdownload.html
@@ -36,5 +36,8 @@
         </div>
         <img src="{{static_url('official_img/app_phone.png')}}">
     </div>
+    <div class="record">
+        <p class="">鄂ICP备14012961号-1&nbsp;&nbsp;Copyright&copy;2014-2015 senguo.cc版权所有</p>
+    </div>
 </div>
 {% end %}
