--- a/senguo.cc/admin/templates/official/product.html
+++ b/senguo.cc/admin/templates/official/product.html
@@ -122,9 +122,11 @@
                     </li>
                 </ul>
             </div>
-        </div>  
+        </div> 
     </div>
-    
+    <div class="record">
+        <p class="">鄂ICP备14012961号-1&nbsp;&nbsp;Copyright&copy;2014-2015 senguo.cc版权所有</p>
+    </div> 
 </div>
 {% end %}
 {% block bottom-js%}
